--- a/charts/mariadb/templates/master-configmap.yaml
+++ b/charts/mariadb/templates/master-configmap.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
   name: {{ template "master.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: "{{ template "mariadb.name" . }}"
     component: "master"
