--- a/charts/mariadb/templates/secrets.yaml
+++ b/charts/mariadb/templates/secrets.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "mariadb.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: "{{ template "mariadb.name" . }}"
     chart: "{{ template "mariadb.chart" . }}"
