--- a/charts/mariadb/templates/slave-pdb.yaml
+++ b/charts/mariadb/templates/slave-pdb.yaml
@@ -4,6 +4,7 @@ apiVersion: policy/v1beta1
 kind: PodDisruptionBudget
 metadata:
   name: {{ template "mariadb.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: "{{ template "mariadb.name" . }}"
     component: "slave"
