--- a/charts/mariadb/templates/slave-statefulset.yaml
+++ b/charts/mariadb/templates/slave-statefulset.yaml
@@ -3,6 +3,7 @@ apiVersion: {{ template "mariadb.statefulset.apiVersion" . }}
 kind: StatefulSet
 metadata:
   name: {{ template "slave.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: {{ template "mariadb.name" . }}
     chart: {{ template "mariadb.chart" . }}
