--- a/charts/mariadb/templates/slave-svc.yaml
+++ b/charts/mariadb/templates/slave-svc.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "slave.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels:
     app: "{{ template "mariadb.name" . }}"
     chart: "{{ template "mariadb.chart" . }}"
