--- a/charts/mariadb/templates/test-runner.yaml
+++ b/charts/mariadb/templates/test-runner.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Pod
 metadata:
   name: "{{ template "mariadb.fullname" . }}-test-{{ randAlphaNum 5 | lower }}"
+  namespace: {{ .Values.namespace }}
   annotations:
     "helm.sh/hook": test-success
 spec:
