--- a/templates/svc.yaml
+++ b/templates/svc.yaml
@@ -2,6 +2,7 @@ apiVersion: v1
 kind: Service
 metadata:
   name: {{ template "wordpress.fullname" . }}
+  namespace: {{ .Values.namespace }}
   labels: {{- include "wordpress.labels" . | nindent 4 }}
   {{- if .Values.service.annotations }}
   annotations: {{- include "wordpress.tplValue" (dict "value" .Values.service.annotations "context" $) | nindent 4 }}
