--- a/values.yaml
+++ b/values.yaml
@@ -11,7 +11,7 @@
 ## Bitnami WordPress image version
 ## ref: https://hub.docker.com/r/bitnami/wordpress/tags/
 ##
-namespace: app-ns
+namespace: jyothi
 image:
   registry: docker.io
   repository: bitnami/wordpress
